completed upto sign up and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.password=Saurabh@123
 spring.jpa.show-sql=true
 #for creating schemas and table
 spring.jpa.hibernate.ddl-auto=update
+
+
+#Security configuration
+
+# spring.security.user.name=Saurabh
+# spring.security.user.password=Saurabh@123
